--- a/works.yml
+++ b/works.yml
@@ -149,3 +149,45 @@ ZW:
   source: Gemeinsamer Bibliotheksverbund ISBN
   title: Die Zeit des Weltbildes
   type: chapter
+ZEG:
+  id: ZEG
+  author:
+    - family: Heidegger
+      given: Martin
+  collection-number: band 13
+  collection-title: Gesamtausgabe
+  container-title: Aus der Erfahrung des Denkens
+  editor:
+    - family: Heidegger
+      given: Hermann
+  event-place: Frankfurt am Main
+  issued:
+    date-parts:
+    - - 2002
+  language: german
+  publisher: Vittorio Klostermann
+  publisher-place: Frankfurt am Main
+  title: 'Zur Erörterung der Gelassenheit: Aus einem Feldweggespräch über das Denken'
+  type: chapter
+  page: 37-74
+FW:
+  id: FW
+  author:
+    - family: Heidegger
+      given: Martin
+  collection-number: band 13
+  collection-title: Gesamtausgabe
+  container-title: Aus der Erfahrung des Denkens
+  editor:
+    - family: Heidegger
+      given: Hermann
+  event-place: Frankfurt am Main
+  issued:
+    date-parts:
+    - - 2002
+  language: german
+  publisher: Vittorio Klostermann
+  publisher-place: Frankfurt am Main
+  title: Der Feldweg
+  type: chapter
+  page: 87-90
