--- a/heidegger-index.yml
+++ b/heidegger-index.yml
@@ -316,6 +316,9 @@ Vereinzelung:
 Verhalten:
   SZ:
   - start: 4
+Verwahrlosung:
+  EWI:
+  - start: 47
 Vom Wesen des Grundes:
   GA 29/30:
   - start: 261
