--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,4 @@ tqdm==4.60.0
 gunicorn==20.1.0
 regex==2021.4.4
 Unidecode==1.3.2
-django-extensions==3.1.5
+django-extensions==3.1.5whitenoise==5.3.0
