added GA 29/30 terms

--- a/heidegger-index.yml
+++ b/heidegger-index.yml
@@ -2,6 +2,15 @@ Abgrund:
   WD:
   - start: 269
     suffix: ff
+Alltäglichkeit:
+  GA 29/30:
+  - end: 400
+    start: 398
+  - start: 405
+Anthropologie:
+  GA 29/30:
+  - start: 406
+  - start: 408
 Aristoteles:
   SZ:
   - start: 3
@@ -65,14 +74,13 @@ Darwinismus:
   GA 29/30:
   - start: 377
   - start: 378
+  - reftype: r
+    start: 402
 Dasein:
   GA 29/30:
   - start: 251
-der Feldberg:
-  GA 55:
-  - start: 335
-  HH:
-  - start: 134
+  - end: 411
+    start: 410
 Dionysos:
   WD:
   - start: 269
@@ -182,6 +190,14 @@ Grundstimmung:
   - end: 254
     start: 251
   - start: 256
+  - start: 411
+Grundstimmung unseres Daseins:
+  GA 29/30:
+  - end: 409
+    start: 408
+Grundverhältnis:
+  GA 29/30:
+  - start: 400
 Haben der Welt:
   GA 29/30:
   - end: 263
@@ -206,6 +222,10 @@ Hölderlin, Friedrich:
   - start: 269
     suffix: ff
   reftype: p
+Kant, Immanuel:
+  GA 29/30:
+  - end: 423
+    start: 421
 Kierkegaard, Søren:
   GA 29/30:
   - start: 226
@@ -213,6 +233,10 @@ Kierkegaard, Søren:
   - end: 43
     start: 42
   reftype: p
+Kritik der Reinen Vernunft:
+  GA 29/30:
+  - reftype: w
+    start: 422
 Langeweile:
   EWI:
   - start: 39
@@ -250,6 +274,9 @@ Natur:
   EWI:
   - start: 41
     suffix: ff
+  GA 29/30:
+  - end: 404
+    start: 402
   WD:
   - start: 277
     suffix: ff
@@ -358,6 +385,10 @@ Sprachgeist:
 Spur:
   WD:
   - start: 272
+Stimmung:
+  GA 29/30:
+  - end: 410
+    start: 409
 Technik:
   GA 42:
   - start: 55
@@ -404,6 +435,10 @@ Weltnacht:
   WD:
   - start: 269
     suffix: ff
+Wesen des Menschen:
+  GA 29/30:
+  - end: 408
+    start: 406
 Zeitlichkeit des Daseins:
   GA 29/30:
   - start: 253
@@ -419,6 +454,9 @@ auf der Stelle zur Stelle:
   - start: 40
   VA:
   - start: 17
+begegnen:
+  GA 29/30:
+  - start: 397
 das Heilige:
   WD:
   - start: 272
@@ -430,12 +468,23 @@ das Wesen des Menschen:
   - start: 70
   ZEG:
   - start: 38
+der Feldberg:
+  GA 55:
+  - start: 335
+  HH:
+  - start: 134
 der Wille:
   WD:
   - start: 278
 im Ganzen:
   GA 29/30:
   - start: 251
+  - end: 412
+    start: 411
+tiefe Langeweile:
+  GA 29/30:
+  - end: 410
+    start: 409
 tiefen Langeweile:
   GA 29/30:
   - start: 251
