--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,4 @@
 recursive-include heidegger_index/templates *.html
 recursive-include heidegger_index/static *
+include heidegger_index/management/commands/*.py
+include index/*.yml
