--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-PyYAML==5.3
-requests==2.25.1
-click==7.1.2
-Django==4.0
-tqdm==4.60.0
-gunicorn==20.1.0
-regex==2021.4.4
-Unidecode==1.3.2
-django-extensions==3.1.5
-whitenoise==5.3.0
+PyYAML==5.*
+requests==2.*
+click==7.*
+Django==4.*
+tqdm==4.*
+gunicorn==20.*
+regex
+Unidecode==1.*
+django-extensions==3.*
+whitenoise==5.*
