--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -300,6 +300,11 @@ Meister Eckhart:
   GA 42:
   - start: 42
   reftype: p
+Mozart, Wolfgang Amadeus:
+  SvG:
+  - end: 118
+    start: 117
+  reftype: p
 Mussolini, Benito:
   GA 42:
   - start: 40
