--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -94,9 +94,14 @@ Dasein:
     start: 410
   - end: 429
     start: 425
+  - end: 433
+    start: 432
 Dasein im Menschen:
   GA 29/30:
   - start: 414
+Daseinsgeschichte:
+  GA 29/30:
+  - start: 432
 Denken:
   GA 16:
   - start: 518
@@ -388,6 +393,7 @@ Natura:
 Nichts:
   GA 29/30:
   - start: 368
+  - start: 433
 Nietzsche, Friedrich:
   GA 42:
   - end: 42
@@ -429,6 +435,9 @@ Philosophie:
   - start: 260
   - end: 431
     start: 421
+Philosophieren:
+  GA 29/30:
+  - start: 415
 Plato:
   SZ:
   - start: 3
@@ -466,6 +475,7 @@ Sein und Zeit:
     start: 262
   - end: 428
     start: 425
+  - start: 433
   ZEG:
   - start: 63
   reftype: w
@@ -511,6 +521,10 @@ Stimmung:
   GA 29/30:
   - end: 410
     start: 409
+System:
+  GA 29/30:
+  - start: 431
+    suffix: f
 Technik:
   GA 42:
   - start: 55
@@ -565,6 +579,8 @@ Vorhandenen:
   GA 29/30:
   - end: 424
     start: 423
+  - start: 434
+    suffix: f
 Welt:
   GA 29/30:
   - start: 251
@@ -576,6 +592,8 @@ Welt:
   - start: 264
   - end: 413
     start: 411
+  - start: 434
+    suffix: f
 Weltalter:
   WD:
   - start: 269
